:bug: fix browse image overflow

--- a/src/components/Browse.css
+++ b/src/components/Browse.css
@@ -24,6 +24,7 @@
   align-items: left;
   justify-content: flex-end;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .browse-content > div {
